// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model Serialization Service UT serialize() should serialize a non-empty app 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "imageId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "imageId",
        "type": "parent",
      },
      "to": "image=image:0.0.1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "regionId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "regionId",
        "type": "parent",
      },
      "to": "region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "serverKey",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "serverKey",
        "type": "parent",
      },
      "to": "server=backend,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "serverKey",
          "toField": "name",
        },
      ],
      "from": "server=backend,app=test-app",
      "relationship": {
        "onField": "serverKey",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "environmentName",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "environmentName",
        "type": "parent",
      },
      "to": "environment=qa,region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
      ],
      "from": "environment=qa,region=region-1,app=test-app",
      "relationship": {
        "onField": "environmentName",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "imageId",
          "toField": "name",
        },
      ],
      "from": "image=image:0.0.1,app=test-app",
      "relationship": {
        "onField": "imageId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
  ],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
    "environment=qa,region=region-1,app=test-app": {
      "className": "Environment",
      "model": {
        "environmentName": "qa",
        "environmentVariables": {
          "key": "value",
        },
      },
    },
    "image=image:0.0.1,app=test-app": {
      "className": "Image",
      "model": {
        "dockerOptions": {
          "buildArgs": {},
          "dockerfilePath": "/Dockerfile",
          "quiet": undefined,
        },
        "imageId": "0.0.1",
        "imageName": "image",
        "imageTag": "0.0.1",
      },
    },
    "region=region-1,app=test-app": {
      "className": "Region",
      "model": {
        "regionId": "region-1",
      },
    },
    "server=backend,app=test-app": {
      "className": "Server",
      "model": {
        "serverKey": "backend",
      },
    },
  },
  "overlays": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize an empty app 1`] = `
{
  "anchors": [],
  "dependencies": [],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
  },
  "overlays": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize only boundary members 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "environmentName",
        },
      ],
      "from": "region=region-1,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "environmentName",
        "type": "parent",
      },
      "to": "environment=qa,region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "regionId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "regionId",
        "type": "parent",
      },
      "to": "region=region-1,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "environmentName",
          "toField": "regionId",
        },
      ],
      "from": "environment=qa,region=region-1,app=test-app",
      "relationship": {
        "onField": "environmentName",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region-1,app=test-app",
    },
  ],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
    "environment=qa,region=region-1,app=test-app": {
      "className": "Environment",
      "model": {
        "environmentName": "qa",
        "environmentVariables": {},
      },
    },
    "region=region-1,app=test-app": {
      "className": "Region",
      "model": {
        "regionId": "region-1",
      },
    },
  },
  "overlays": [],
}
`;

exports[`Model Serialization Service UT serialize() should serialize when multiple models have dependency on same model 1`] = `
{
  "anchors": [],
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "name",
          "toField": "regionId",
        },
      ],
      "from": "app=test-app",
      "relationship": {
        "onField": "name",
        "toField": "regionId",
        "type": "parent",
      },
      "to": "region=region,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "regionId",
          "toField": "name",
        },
      ],
      "from": "region=region,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "name",
        "type": "child",
      },
      "to": "app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "subnetId",
        },
      ],
      "from": "region=region,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "subnetId",
        "type": "parent",
      },
      "to": "subnet=region-private,region=region,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "regionId",
          "toField": "subnetId",
        },
      ],
      "from": "region=region,app=test-app",
      "relationship": {
        "onField": "regionId",
        "toField": "subnetId",
        "type": "parent",
      },
      "to": "subnet=region-public,region=region,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "subnetId",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "subnetId",
          "toField": "regionId",
        },
      ],
      "from": "subnet=region-public,region=region,app=test-app",
      "relationship": {
        "onField": "subnetId",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region,app=test-app",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "subnetId",
          "toField": "regionId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "subnetId",
          "toField": "regionId",
        },
      ],
      "from": "subnet=region-private,region=region,app=test-app",
      "relationship": {
        "onField": "subnetId",
        "toField": "regionId",
        "type": "child",
      },
      "to": "region=region,app=test-app",
    },
  ],
  "models": {
    "app=test-app": {
      "className": "App",
      "model": {
        "name": "test-app",
      },
    },
    "region=region,app=test-app": {
      "className": "Region",
      "model": {
        "regionId": "region",
      },
    },
    "subnet=region-private,region=region,app=test-app": {
      "className": "Subnet",
      "model": {
        "options": {
          "disableSubnetIntraNetwork": false,
          "subnetType": "private",
        },
        "region": {
          "context": "region=region,app=test-app",
        },
        "subnetId": "region-private",
        "subnetName": "private",
      },
    },
    "subnet=region-public,region=region,app=test-app": {
      "className": "Subnet",
      "model": {
        "options": {
          "disableSubnetIntraNetwork": false,
          "subnetType": "private",
        },
        "region": {
          "context": "region=region,app=test-app",
        },
        "subnetId": "region-public",
        "subnetName": "public",
      },
    },
  },
  "overlays": [],
}
`;
